--- a/package.json
+++ b/package.json
@@ -51,6 +51,11 @@
     "stylelint-config-sass-guidelines": "^12.1.0",
     "webpack-dev-server": "^5.2.2"
   },
+  "overrides": {
+    "glob": "^7.2.0",
+    "resolve": "^1.22.2",
+    "postcss": "^8.5.6"
+  },
   "browserslist": [
     "defaults"
   ]
