--- a/package.json
+++ b/package.json
@@ -6,12 +6,6 @@
     "lint": "eslint **/*.{js,jsx}"
   },
   "dependencies": {
-    "@babel/core": "7",
-    "@babel/plugin-transform-runtime": "7",
-    "@babel/preset-env": "7",
-    "@babel/preset-react": "^7.26.3",
-    "@babel/runtime": "7",
-    "babel-loader": "10",
     "classnames": "^2.5.1",
     "compression-webpack-plugin": "11",
     "css-loader": "^7.1.2",
@@ -23,7 +17,8 @@
     "react-dom": "^19.2.0",
     "sass": "^1.93.2",
     "sass-loader": "^16.0.6",
-    "shakapacker": "8.4.0",
+    "shakapacker": "9.3.0",
+    "swc-loader": "^0.2.6",
     "terser-webpack-plugin": "5",
     "webpack": "5",
     "webpack-assets-manifest": "6",
