--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   },
   "version": "0.1.1",
   "devDependencies": {
+    "@swc/core": "^1.15.1",
+    "@swc/jest": "^0.2.39",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
